# ndk-dynamic_pointer_cast

./: CMakeLists.txt  dlopen_lib.cpp  dlopen_lib.h  headers.h  load_lib.cpp  main.cpp
